@@ -18,8 +18,12 @@ ext {
   junitVersion = '5.9.2'
 }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+java {
+  sourceCompatibility = JavaVersion.VERSION_21
+  targetCompatibility = JavaVersion.VERSION_21
+}
+
+
 
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
@@ -27,18 +31,18 @@ tasks.withType(JavaCompile) {
 
 application {
   mainModule = 'com.example.internduru'
-  mainClass = 'com.example.internduru.StageHandler'
+  mainClass = 'com.example.internduru.Launcher'
 }
 
 javafx {
-  version = '17.0.6'
+  version = '21.0.2'
   modules = ['javafx.controls', 'javafx.fxml']
 }
 
 
 dependencies {
-  implementation 'org.openjfx:javafx-controls:21'
-  implementation 'org.openjfx:javafx-fxml:21'
+  implementation 'org.openjfx:javafx-controls:21.0.2'
+  implementation 'org.openjfx:javafx-fxml:21.0.2'
 
   implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
   implementation 'org.json:json:20231013'
@@ -48,18 +52,21 @@ dependencies {
 }
 
 
-//"./gradlew shadowJar" runla
-//build-libs'e bir exe jar oluşturuyor ama doğru gibi gelmedi, açılmıyor?
-//buna bakacağım
-jar {
+//"./gradlew shadowJar"
+shadowJar {
   manifest {
     attributes (
-            'Main-Class': 'com.example.internduru.StageHandler'
+            'Main-Class': 'com.example.internduru.Launcher'
     )
   }
 }
 
-
+run {
+  jvmArgs = [
+          '--module-path', 'com.example.internduru',
+          '--add-modules', 'javafx.controls: 21.0.2, javafx.fxml: 21.0.2'
+  ]
+}
 
 test {
   useJUnitPlatform()
@@ -67,11 +74,19 @@ test {
 
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+  options = [
+          '--strip-debug',
+          '--compress', '2',
+          '--no-header-files',
+          '--no-man-pages',
+          '--add-modules', 'javafx.controls,javafx.fxml' // Ensure the correct modules are included
+  ]
   launcher {
     name = 'app'
   }
 }
+
+
 
 jlinkZip {
   group = 'distribution'
